syn-state-machine/src/common_tokens/patterns/snapshots/syn_state_machine__common_tokens__patterns__range_patterns__tests__it_matches_from.snap
---
source: syn-state-machine/src/common_tokens/patterns/range_patterns.rs
expression: "crate::parse::<RangePattern<Infallible>>(::quote::quote! { 0 .. })"
---
Ok(
    (
        RangeFromPattern(
            RangeFromPattern(
                SignedIntegerLit(
                    (
                        None,
                        IntegerLit {
                            raw: "0",
                            start_main_part: 0,
                            end_main_part: 1,
                            base: Decimal,
                        },
                    ),
                ),
            ),
        ),
        0,
    ),
)
